# psql-notify-listen

./: Cargo.toml
database/entities/: Cargo.toml
database/entities/src/: lib.rs  notified_count_table.rs  prelude.rs  received_count_table.rs  widget_table.rs
database/manager/: Cargo.toml
database/manager/src/: lib.rs
database/migration/: Cargo.toml
database/migration/src/: lib.rs  m20240813_000001_create_widget_table.rs  main.rs
listener/: Cargo.toml
listener/src/: main.rs
notifier/: Cargo.toml
notifier/src/: main.rs
scripts/: update-sea-orm-entities.sh
