[package]
name = "listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-postgres = "0.7.11"
serde.workspace = true
serde_json.workspace = true

manager = { path = "../database/manager" }
futures-channel = "0.3.30"
futures-util = "0.3.30"
